#cmake_minimum_required(VERSION 3.5)
#project(AC_detect_test)
#find_package(OpenCV  REQUIRED)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -g -O0")
#include_directories(${PROJECT_SOURCE_DIR}/include)
#include_directories(${PROJECT_SOURCE_DIR}/libBase/include)
#include_directories(${PROJECT_SOURCE_DIR}/libPid/include)
#include_directories(${PROJECT_SOURCE_DIR}/libHardWare/usbCapture/include)
#include_directories(${PROJECT_SOURCE_DIR}/libDetection/include)
#FILE(GLOB SRC *.hpp *.cpp)

#add_executable(${PROJECT_NAME} ${SRC})
#target_link_libraries(${PROJECT_NAME} Base pthread UsbCapture)
#target_link_libraries(${PROJECT_NAME} Detection)
#target_link_libraries(${PROJECT_NAME} Pid)
#target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} librealsense2.so)
#target_link_libraries(${PROJECT_NAME} libncurses.so.5)

#AUX_SOURCE_DIRECTORY(./src Pid_SRCS)
#ADD_LIBRARY(Pid ${Pid_SRCS})