cmake_minimum_required(VERSION 3.5)
project(serial_test)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -O0")
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/libBase/include)
include_directories(${PROJECT_SOURCE_DIR}/libHardWare/serialPort/include)
include_directories(${PROJECT_SOURCE_DIR}/common)

#FILE(GLOB SRC *.hpp *.cpp)
add_executable(${PROJECT_NAME} serial_test.cpp)
target_link_libraries(${PROJECT_NAME} pthread SerialPort Base)
target_link_libraries(${PROJECT_NAME} djiosdk-core LinuxHelper)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} librealsense2.so)

add_executable(socket_test socket_test.cpp)
target_link_libraries(socket_test Detection pthread SerialPort Base)
target_link_libraries(socket_test djiosdk-core LinuxHelper)
target_link_libraries(socket_test ${OpenCV_LIBS} librealsense2.so)